Updated Indonesian translation

--- a/po/id.po
+++ b/po/id.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp gnome-2-30\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=yelp&component=general\n"
-"POT-Creation-Date: 2010-04-05 14:02+0000\n"
-"PO-Revision-Date: 2010-04-12 15:12+0700\n"
+"POT-Creation-Date: 2010-03-30 16:12+0000\n"
+"PO-Revision-Date: 2010-04-13 13:31+0700\n"
 "Last-Translator: Andika Triwidada <andika@gmail.com>\n"
 "Language-Team: Indonesia <kontak@id.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -299,9 +299,8 @@ msgid "Accessibility"
 msgstr "Kemudahan Akses"
 
 #: ../data/toc.xml.in.h:4
-#, fuzzy
 msgid "Action Games"
-msgstr "Bagian 3nas"
+msgstr "Permainan Aksi"
 
 #: ../data/toc.xml.in.h:5
 msgid "Adventure Games"
@@ -309,26 +308,23 @@ msgstr "Permainan Petualangan"
 
 #: ../data/toc.xml.in.h:6
 msgid "Amusement"
-msgstr ""
+msgstr "Hiburan"
 
 #: ../data/toc.xml.in.h:7
-#, fuzzy
 msgid "Applications for viewing and manipulating graphics"
-msgstr "Aplikasi untuk memanipulasi atau menampilkan grafis"
+msgstr "Aplikasi untuk menilik atau memanipulasi grafis"
 
 #: ../data/toc.xml.in.h:8
-#, fuzzy
 msgid "Applications related to audio and video"
-msgstr "Aplikasi yang berhubungan dengan X Windows"
+msgstr "Aplikasi terkait audio dan video"
 
 #: ../data/toc.xml.in.h:9
-#, fuzzy
 msgid "Applications that teach or aid in learning"
-msgstr "Aplikasi yang berhubungan dengan internet"
+msgstr "Aplikasi yang mengajarkan atau membantu proses belajar"
 
 #: ../data/toc.xml.in.h:10
 msgid "Arcade Games"
-msgstr ""
+msgstr "Permainan Arcade"
 
 #: ../data/toc.xml.in.h:11
 msgid "Archiving Tools"
@@ -352,16 +348,15 @@ msgstr "Biologi"
 
 #: ../data/toc.xml.in.h:16
 msgid "Blocks Games"
-msgstr ""
+msgstr "Permainan Blok"
 
 #: ../data/toc.xml.in.h:17
-#, fuzzy
 msgid "Board Games"
-msgstr "Permainan"
+msgstr "Permainan Papan"
 
 #: ../data/toc.xml.in.h:18
 msgid "Building"
-msgstr ""
+msgstr "Membangun"
 
 #: ../data/toc.xml.in.h:19
 msgid "Calculator"
@@ -424,13 +419,12 @@ msgid "Desktop"
 msgstr "Desktop"
 
 #: ../data/toc.xml.in.h:34
-#, fuzzy
 msgid "Desktop Settings"
-msgstr "Desktop"
+msgstr "Tatanan Desktop"
 
 #: ../data/toc.xml.in.h:36
 msgid "Dialup"
-msgstr ""
+msgstr "Dialup"
 
 #: ../data/toc.xml.in.h:37
 msgid "Dictionaries"
@@ -439,7 +433,7 @@ msgstr "Kamus"
 #. Translators: this is a menu title for burning audio and video to dics
 #: ../data/toc.xml.in.h:39
 msgid "Disc Burning"
-msgstr ""
+msgstr "Membakar Cakram"
 
 #: ../data/toc.xml.in.h:40
 msgid "Economy"
@@ -451,7 +445,7 @@ msgstr "Pendidikan"
 
 #: ../data/toc.xml.in.h:42
 msgid "Electricity"
-msgstr ""
+msgstr "Kelistrikan"
 
 #: ../data/toc.xml.in.h:43
 msgid "Electronics"
@@ -463,11 +457,11 @@ msgstr "Perkakas Surel"
 
 #: ../data/toc.xml.in.h:45
 msgid "Emulator"
-msgstr ""
+msgstr "Emulator"
 
 #: ../data/toc.xml.in.h:46
 msgid "Engineering"
-msgstr ""
+msgstr "Rekayasa"
 
 #: ../data/toc.xml.in.h:47
 msgid "File Manager"
@@ -479,7 +473,7 @@ msgstr "Perkakas Berkas"
 
 #: ../data/toc.xml.in.h:49
 msgid "File Transfer"
-msgstr ""
+msgstr "Transfer Berkas"
 
 #: ../data/toc.xml.in.h:50
 msgid "Filesystem"
@@ -491,7 +485,7 @@ msgstr "Perkakas Keuangan"
 
 #: ../data/toc.xml.in.h:52
 msgid "Flow Charting Tools"
-msgstr ""
+msgstr "Perkakas Diagram Alir (Flow Chart)"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
@@ -503,16 +497,15 @@ msgstr "GTK"
 
 #: ../data/toc.xml.in.h:55
 msgid "GUI Designers"
-msgstr ""
+msgstr "Perancang GUI"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
-msgstr ""
+msgstr "Aplikasi generik bagi lingkungan GNOME"
 
 #: ../data/toc.xml.in.h:58
-#, fuzzy
 msgid "Generic applications for the KDE environment"
-msgstr "Dokumen khusus mengenai Lingkungan Desktop KDE"
+msgstr "Aplikasi generik bagi lingkungan KDE"
 
 #: ../data/toc.xml.in.h:59
 msgid "Geography"
@@ -532,24 +525,23 @@ msgstr "Grafis"
 
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
-msgstr ""
+msgstr "Panduan dan pegangan bagi aplikasi yang menyambung ke dunia luar"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
-msgstr ""
+msgstr "Panduan untuk terlibat dalam pengembangan"
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
 msgstr "Radio Amatir"
 
 #: ../data/toc.xml.in.h:66
-#, fuzzy
 msgid "Hardware Settings"
-msgstr "Perangkat Keras"
+msgstr "Tatanan Perangkat Keras"
 
 #: ../data/toc.xml.in.h:67
 msgid "Have some fun"
-msgstr ""
+msgstr "Ayo bermain"
 
 #: ../data/toc.xml.in.h:68
 msgid "History"
@@ -589,7 +581,7 @@ msgstr "Permainan Anak"
 
 #: ../data/toc.xml.in.h:77
 msgid "Learn more about making your system more accessible for a range of disabilities"
-msgstr ""
+msgstr "Belajar lebih jauh tentang membuat sistem Anda lebih mudah dipakai penyandang cacat"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
@@ -616,18 +608,16 @@ msgid "Midi"
 msgstr "Midi"
 
 #: ../data/toc.xml.in.h:84
-#, fuzzy
 msgid "Miscellaneous Documentation"
-msgstr "Dokumen lain-lain"
+msgstr "Dokumentasi Lain-lain"
 
 #: ../data/toc.xml.in.h:85
 msgid "Mixers"
-msgstr ""
+msgstr "Pencampur"
 
 #: ../data/toc.xml.in.h:86
-#, fuzzy
 msgid "Monitor"
-msgstr "/_Edit"
+msgstr "Monitor"
 
 #: ../data/toc.xml.in.h:87
 msgid "Motif"
@@ -639,7 +629,7 @@ msgstr "Musik"
 
 #: ../data/toc.xml.in.h:89
 msgid "News"
-msgstr ""
+msgstr "Berita"
 
 #: ../data/toc.xml.in.h:90
 msgid "Numerical Analysis"
@@ -650,14 +640,12 @@ msgid "OCR"
 msgstr "OCR"
 
 #: ../data/toc.xml.in.h:92
-#, fuzzy
 msgid "Office Applications"
-msgstr "Aplikasi Lainnya"
+msgstr "Aplikasi Perkantoran"
 
 #: ../data/toc.xml.in.h:93
-#, fuzzy
 msgid "Office applications"
-msgstr "Aplikasi Lainnya"
+msgstr "Aplikasi perkantoran"
 
 #: ../data/toc.xml.in.h:94
 msgid "Other Documentation"
@@ -677,12 +665,11 @@ msgstr "Manajer Paket"
 
 #: ../data/toc.xml.in.h:98
 msgid "Parallel Computing"
-msgstr ""
+msgstr "Parallel Computing"
 
 #: ../data/toc.xml.in.h:99
-#, fuzzy
 msgid "Photography"
-msgstr "Bibliografi"
+msgstr "Fotografi"
 
 #: ../data/toc.xml.in.h:100
 msgid "Physics"
@@ -690,9 +677,8 @@ msgstr "Fisika"
 
 #. Translators: this is a menu title for audio and video players
 #: ../data/toc.xml.in.h:102
-#, fuzzy
 msgid "Players"
-msgstr "Halaman"
+msgstr "Pemutar"
 
 #: ../data/toc.xml.in.h:103
 msgid "Presentation Tools"
@@ -706,7 +692,7 @@ msgstr "Pencetakan"
 
 #: ../data/toc.xml.in.h:105
 msgid "Profiling Tools"
-msgstr ""
+msgstr "Perkakas Profiling"
 
 #: ../data/toc.xml.in.h:106
 msgid "Project Management Tools"
@@ -721,18 +707,17 @@ msgid "Qt"
 msgstr "Qt"
 
 #: ../data/toc.xml.in.h:109
-#, fuzzy
 msgid "Raster Graphics"
-msgstr "Grafis"
+msgstr "Grafis Raster"
 
 #. Translators: this is a menu title for audio and video recorders
 #: ../data/toc.xml.in.h:111
 msgid "Recorders"
-msgstr ""
+msgstr "Perekam"
 
 #: ../data/toc.xml.in.h:112
 msgid "Remote Access"
-msgstr ""
+msgstr "Akses Jarak Jauh"
 
 #: ../data/toc.xml.in.h:113
 msgid "Revision Control"
@@ -744,11 +729,11 @@ msgstr "Robotika"
 
 #: ../data/toc.xml.in.h:115
 msgid "Role Playing Games"
-msgstr ""
+msgstr "Permainan Role Playing"
 
 #: ../data/toc.xml.in.h:116
 msgid "Scanning"
-msgstr ""
+msgstr "Pemindaian"
 
 #: ../data/toc.xml.in.h:117
 msgid "Science"
@@ -760,7 +745,7 @@ msgstr "Keamanan"
 
 #: ../data/toc.xml.in.h:119
 msgid "Sequencers"
-msgstr ""
+msgstr "Sequencer"
 
 #: ../data/toc.xml.in.h:120
 msgid "Settings"
@@ -768,7 +753,7 @@ msgstr "Tatanan"
 
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
-msgstr ""
+msgstr "Tatanan yang dapat dimanipulasi pengguna untuk membuat lingkungan mereka lebih nyaman"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
@@ -783,9 +768,8 @@ msgid "Sound &amp; Video"
 msgstr "Suara $amp; Video"
 
 #: ../data/toc.xml.in.h:125
-#, fuzzy
 msgid "Sound &amp; Video Editing"
-msgstr "Suara $amp; Video"
+msgstr "Penyuntingan Suara &amp; Video"
 
 #: ../data/toc.xml.in.h:126
 msgid "Sports"
@@ -816,13 +800,12 @@ msgid "Telephony"
 msgstr "Telefoni"
 
 #: ../data/toc.xml.in.h:133
-#, fuzzy
 msgid "Telephony Tools"
-msgstr "Pembangunan"
+msgstr "Perkakas Telefoni"
 
 #: ../data/toc.xml.in.h:134
 msgid "Terminal Emulator"
-msgstr ""
+msgstr "Emulator Terminal"
 
 #: ../data/toc.xml.in.h:135
 msgid "Text Editors"
@@ -833,9 +816,8 @@ msgid "Text Tools"
 msgstr "Perkakas Teks"
 
 #: ../data/toc.xml.in.h:137
-#, fuzzy
 msgid "Tools to help you manage your computer"
-msgstr "Peralatan untuk mengelola komputer anda"
+msgstr "Peralatan untuk membantu mengelola komputer Anda"
 
 #: ../data/toc.xml.in.h:138
 msgid "Translation Tools"
@@ -843,21 +825,19 @@ msgstr "Perkakas Penerjemahan"
 
 #: ../data/toc.xml.in.h:139
 msgid "Tuners"
-msgstr ""
+msgstr "Radio"
 
 #: ../data/toc.xml.in.h:140
 msgid "Utilities"
 msgstr "Peralatan"
 
 #: ../data/toc.xml.in.h:141
-#, fuzzy
 msgid "Utilities to help you get work done"
-msgstr "Peralatan untuk mengelola komputer anda"
+msgstr "Utilitas untuk membantu Anda menyelesaikan pekerjaan"
 
 #: ../data/toc.xml.in.h:142
-#, fuzzy
 msgid "Vector Graphics"
-msgstr "Grafis"
+msgstr "Grafis Vektor"
 
 #: ../data/toc.xml.in.h:143
 msgid "Video"
@@ -865,7 +845,7 @@ msgstr "Video"
 
 #: ../data/toc.xml.in.h:144
 msgid "Video Conference"
-msgstr ""
+msgstr "Konferensi Video"
 
 #. Translators: This is a menu title for graphics viewing applications
 #: ../data/toc.xml.in.h:146
@@ -969,9 +949,8 @@ msgid "Use system fonts"
 msgstr "Gunakan fonta sistem"
 
 #: ../data/yelp.schemas.in.h:8
-#, fuzzy
 msgid "Use the default fonts set for the system."
-msgstr "Gunakan ketetapan jenis huruf standar untuk sistem."
+msgstr "Gunakan set fonta baku bagi sistem."
 
 #: ../src/eggdesktopfile.c:165
 #, c-format
@@ -1036,33 +1015,33 @@ msgstr "Opsi manajemen sesi:"
 msgid "Show session management options"
 msgstr "Tampilkan opsi manajemen sesi"
 
-#: ../src/yelp-bookmarks.c:147
+#: ../src/yelp-bookmarks.c:148
 msgid "Open Bookmark in New Window"
 msgstr "Buka Pembatas Buku pada Jendela Baru"
 
-#: ../src/yelp-bookmarks.c:151
+#: ../src/yelp-bookmarks.c:152
 msgid "Rename Bookmark"
 msgstr "Ubah Nama Pembatas"
 
-#: ../src/yelp-bookmarks.c:155
+#: ../src/yelp-bookmarks.c:156
 msgid "Remove Bookmark"
 msgstr "Buang Pembatas"
 
-#: ../src/yelp-bookmarks.c:319
+#: ../src/yelp-bookmarks.c:314
 #, c-format
 msgid "A bookmark titled %s already exists for this page."
 msgstr "Sebuah pembatas %s sudah ada untuk halaman ini."
 
-#: ../src/yelp-bookmarks.c:395
+#: ../src/yelp-bookmarks.c:390
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
 msgstr "Judul sebuah pembatas buku <b>%s</b> sudah ada untuk halaman ini."
 
-#: ../src/yelp-bookmarks.c:408
+#: ../src/yelp-bookmarks.c:403
 msgid "Help Topics"
 msgstr "Topik Bantuan"
 
-#: ../src/yelp-bookmarks.c:423
+#: ../src/yelp-bookmarks.c:418
 msgid "Document Sections"
 msgstr "Bagian Dokumen"
 
@@ -1095,9 +1074,9 @@ msgstr "Halaman %s tak ditemukan di dokumen %s."
 #: ../src/yelp-docbook.c:368
 #: ../src/yelp-info.c:339
 #: ../src/yelp-man.c:386
-#, fuzzy, c-format
+#, c-format
 msgid "The requested page was not found in the document %s."
-msgstr "File dokumen '%s' tidak ada"
+msgstr "Halaman yang diminta tak ditemukan di dokumen %s."
 
 #: ../src/yelp-db-print.c:392
 #: ../src/yelp-docbook.c:410
@@ -1110,9 +1089,9 @@ msgstr "Berkas tak ditemukan"
 #: ../src/yelp-docbook.c:411
 #: ../src/yelp-info.c:381
 #: ../src/yelp-man.c:430
-#, fuzzy, c-format
+#, c-format
 msgid "The file ‘%s’ does not exist."
-msgstr "File dokumen '%s' tidak ada"
+msgstr "Berkas '%s' tak ada."
 
 #: ../src/yelp-db-print.c:406
 #: ../src/yelp-db-print.c:418
@@ -1121,21 +1100,20 @@ msgstr "File dokumen '%s' tidak ada"
 #: ../src/yelp-info.c:395
 #: ../src/yelp-man.c:458
 #: ../src/yelp-toc.c:437
-#, fuzzy
 msgid "Could not parse file"
-msgstr "Tidak dapat membaca bagian"
+msgstr "Tak bisa mengurai berkas"
 
 #: ../src/yelp-db-print.c:407
 #: ../src/yelp-docbook.c:425
-#, fuzzy, c-format
+#, c-format
 msgid "The file ‘%s’ could not be parsed because it is not a well-formed XML document."
-msgstr "Berkas ‘%s’ tidak dapat diuraikan. Apakah berkas tidak ada atau tidak berbentuk XML yang baik."
+msgstr "Berkas ‘%s’ tak dapat diuraikan karena bukan dokumen XML yang baik bentuknya."
 
 #: ../src/yelp-db-print.c:419
 #: ../src/yelp-docbook.c:437
-#, fuzzy, c-format
+#, c-format
 msgid "The file ‘%s’ could not be parsed because one or more of its included files is not a well-formed XML document."
-msgstr "Berkas ‘%s’ tidak dapat diuraikan. Apakah berkas tidak ada atau tidak berbentuk XML yang baik."
+msgstr "Berkas ‘%s’ tak dapat diuraikan karena satu atau lebih berkas terkait bukan dokumen XLM yang baik bentuknya."
 
 #: ../src/yelp-db-print.c:766
 #: ../src/yelp-docbook.c:787
@@ -1153,14 +1131,13 @@ msgid "Could Not Read File"
 msgstr "Tak Bisa Baca Berkas"
 
 #: ../src/yelp-error.c:146
-#, fuzzy
 msgid "No information is available about this error."
-msgstr "Tidak ada informasi tersedia tentang kesalahan."
+msgstr "Tak ada informasi tersedia tentang galat ini."
 
 #: ../src/yelp-info.c:396
-#, fuzzy, c-format
+#, c-format
 msgid "The file ‘%s’ could not be parsed because it is not a well-formed info page."
-msgstr "Berkas ‘%s’ tidak dapat diuraikan. Apakah berkas tidak ada atau tidak berbentuk halaman info yang baik."
+msgstr "Berkas ‘%s’ tak dapat diuraikan karena bukan halaman info yang baik bentuknya."
 
 #: ../src/yelp-io-channel.c:132
 #, c-format
@@ -1195,9 +1172,9 @@ msgid "The directory ‘%s’ does not exist."
 msgstr "Direktori '%s' tak ada."
 
 #: ../src/yelp-man.c:459
-#, fuzzy, c-format
+#, c-format
 msgid "The file ‘%s’ could not be parsed because it is not a well-formed man page."
-msgstr "Berkas ‘%s’ tidak dapat diuraikan. Apakah berkas tidak ada atau tidak berbentuk halaman info yang baik."
+msgstr "Berkas ‘%s’ tak dapat diuraikan karena bukan halaman man yang baik bentuknya."
 
 #: ../src/yelp-print.c:99
 msgid "Print"
@@ -1267,7 +1244,7 @@ msgstr "Ulangi pencarian online pada %s"
 #.
 #: ../src/yelp-search-parser.c:874
 msgid "a:about:an:are:as:at:be:broke:broken:by:can:can't:dialog:dialogue:do:doesn't:doesnt:don't:dont:explain:for:from:get:gets:got:make:makes:not:when:has:have:help:how:i:in:is:it:item:me:my:of:on:or:tell:that:the:thing:this:to:what:where:who:will:with:won't:wont:why:work:working:works"
-msgstr ""
+msgstr "satu:suatu:tentang:adalah:yaitu:pada:sebagai:oleh:tak:tidak:dialog:bagi:dari:buat:membuat:milik:bagaimana:saya:aku:dalam:itu:ini:apa:di:akan:kenapa:mengapa"
 
 #. Translators: This is a list of common prefixes for words.
 #. * Do not translate this directly.  Instead, use a colon
@@ -1279,7 +1256,7 @@ msgstr ""
 #.
 #: ../src/yelp-search-parser.c:890
 msgid "re"
-msgstr ""
+msgstr "NULL"
 
 #. Translators: This is a list of (guess what?) common suffixes
 #. * to words.  Things that may be put at ends of words to slightly
@@ -1290,7 +1267,7 @@ msgstr ""
 #.
 #: ../src/yelp-search-parser.c:899
 msgid "ers:er:ing:es:s:'s"
-msgstr ""
+msgstr "lah:kah:tah:pun:nya:ku:mu"
 
 #: ../src/yelp-search-parser.c:1095
 msgid "No Comment"
@@ -1302,9 +1279,8 @@ msgid "Search could not be processed"
 msgstr "Pencarian tak dapat diproses"
 
 #: ../src/yelp-search.c:239
-#, fuzzy
 msgid "The requested search could not be processed."
-msgstr "File dokumen '%s' tidak ada"
+msgstr "Pencarian yang diminta tak dapat diproses."
 
 #: ../src/yelp-search.c:366
 msgid "Cannot process the search"
@@ -1312,45 +1288,41 @@ msgstr "Tak bisa memroses pencarian"
 
 #: ../src/yelp-search.c:367
 msgid "The search processor returned invalid results"
-msgstr ""
+msgstr "Pemroses pencarian mengembalikan hasil tak valid"
 
 #: ../src/yelp-toc.c:267
 #, c-format
 msgid "The page %s was not found in the TOC."
-msgstr ""
+msgstr "Halaman %s tak ditemukan di daftar isi."
 
 #: ../src/yelp-toc.c:366
-#, fuzzy
 msgid "The requested page was not found in the TOC."
-msgstr "File dokumen '%s' tidak ada"
+msgstr "Halaman yang diminta tak ada di daftar isi."
 
 #: ../src/yelp-toc.c:438
-#, fuzzy
 msgid "The TOC file could not be parsed because it is not a well-formed XML document."
-msgstr "Berkas ‘%s’ tidak dapat diuraikan. Apakah berkas tidak ada atau tidak berbentuk XML yang baik."
+msgstr "Berkas daftar isi tak dapat diuraikan karena bukan dokumen XML yang baik bentuknya."
 
 #: ../src/yelp-transform.c:86
 msgid "Invalid Stylesheet"
-msgstr ""
+msgstr "Stylesheet Tak Valid"
 
 #: ../src/yelp-transform.c:87
-#, fuzzy, c-format
+#, c-format
 msgid "The XSLT stylesheet ‘%s’ is either missing, or it is not valid."
-msgstr "Dokumen ‘%s’ tidak dapat diproses. Berkas ‘%s’ apakah hilang atau bukan merupakan gaya XSLT yang benar."
+msgstr "Stylesheet XSLT '%s' mungkin hilang atau tak valid."
 
 #: ../src/yelp-transform.c:122
-#, fuzzy
 msgid "Broken Transformation"
-msgstr "Informasi Dokumen"
+msgstr "Transformasi Rusak"
 
 #: ../src/yelp-transform.c:123
 msgid "An unknown error occurred while attempting to transform the document."
-msgstr ""
+msgstr "Galat tak dikenal terjadi ketika mencoba mentransformasi dokumen."
 
 #: ../src/yelp-transform.c:389
-#, fuzzy
 msgid "No href attribute found on yelp:document\n"
-msgstr "Tidak menemukan atribut href pada dokumen yelp"
+msgstr "Tak ditemukan atribut href pada yelp:document\n"
 
 #: ../src/yelp-transform.c:404
 msgid "Out of memory"
@@ -1525,13 +1497,13 @@ msgstr "Halaman Tak Dikenal"
 #: ../src/yelp-window.c:1114
 #, c-format
 msgid "The requested URI \"%s\" is invalid"
-msgstr ""
+msgstr "URI \"%s\" yang diminta tak valid"
 
 #: ../src/yelp-window.c:1044
 #: ../src/yelp-window.c:1107
 #: ../src/yelp-window.c:1115
 msgid "Unable to load page"
-msgstr ""
+msgstr "Tak bisa memuat halaman"
 
 #: ../src/yelp-window.c:1336
 msgid "_Search:"
@@ -1547,7 +1519,7 @@ msgstr "Tak bisa membuat jendela"
 
 #: ../src/yelp-window.c:1363
 msgid "Cannot create search component"
-msgstr ""
+msgstr "Tak bisa membuat komponen pencarian"
 
 #: ../src/yelp-window.c:1535
 msgid "Fin_d:"
