Updated Occitan translation

--- a/po/oc.po
+++ b/po/oc.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the yelp package.
 # Copyright (C) 2005 Free Software Foundation,Inc.
 #
-# Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>, 2006-2008.
+# Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>, 2006-2008, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-07-02 09:01+0200\n"
-"PO-Revision-Date: 2008-08-06 02:41+0200\n"
+"PO-Revision-Date: 2010-04-14 18:40+0200\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -59,7 +59,7 @@ msgstr "Periferics materials"
 
 #: ../data/man.xml.in.h:9
 msgid "Kernel Routines"
-msgstr ""
+msgstr "Rotinas del nucli"
 
 #: ../data/man.xml.in.h:10
 msgid "Manual Pages"
@@ -239,7 +239,7 @@ msgstr "Administracion sistèma"
 
 #: ../data/man.xml.in.h:54
 msgid "System Calls"
-msgstr ""
+msgstr "Apèls del sistèma"
 
 #: ../data/man.xml.in.h:55
 msgid "System V Form/Menu Functions"
@@ -283,11 +283,11 @@ msgstr "Presentacion de X11"
 
 #: ../data/toc.xml.in.h:1
 msgid "2D Graphics"
-msgstr ""
+msgstr "Grafismes 2D"
 
 #: ../data/toc.xml.in.h:2
 msgid "3D Graphics"
-msgstr ""
+msgstr "Grafismes 3D"
 
 #: ../data/toc.xml.in.h:3
 msgid "Accessibility"
@@ -307,11 +307,11 @@ msgstr "Divertiment"
 
 #: ../data/toc.xml.in.h:7
 msgid "Applications for viewing and manipulating graphics"
-msgstr ""
+msgstr "Aplicacions per afichar o manipular de grafics"
 
 #: ../data/toc.xml.in.h:8
 msgid "Applications related to audio and video"
-msgstr ""
+msgstr "Aplicacions ligadas a l'àudio o a la vidèo"
 
 #: ../data/toc.xml.in.h:9
 msgid "Applications that teach or aid in learning"
@@ -319,11 +319,11 @@ msgstr "Aplicacions per ensenhar o ajudar a aprene"
 
 #: ../data/toc.xml.in.h:10
 msgid "Arcade Games"
-msgstr ""
+msgstr "Jòcs d'arcada"
 
 #: ../data/toc.xml.in.h:11
 msgid "Archiving Tools"
-msgstr ""
+msgstr "Espleches d'archivatge"
 
 #: ../data/toc.xml.in.h:12
 msgid "Art"
@@ -343,15 +343,15 @@ msgstr "Biologia"
 
 #: ../data/toc.xml.in.h:16
 msgid "Blocks Games"
-msgstr ""
+msgstr "Jòcs de blòcs"
 
 #: ../data/toc.xml.in.h:17
 msgid "Board Games"
-msgstr ""
+msgstr "Jòcs de platèus"
 
 #: ../data/toc.xml.in.h:18
 msgid "Building"
-msgstr ""
+msgstr "Construccion"
 
 #: ../data/toc.xml.in.h:19
 msgid "Calculator"
@@ -367,7 +367,7 @@ msgstr "Jòcs de cartas"
 
 #: ../data/toc.xml.in.h:22
 msgid "Charting Tools"
-msgstr ""
+msgstr "Espleches de diagramas"
 
 #: ../data/toc.xml.in.h:23
 msgid "Chat"
@@ -395,11 +395,11 @@ msgstr "Construccion"
 
 #: ../data/toc.xml.in.h:29
 msgid "Contact Management"
-msgstr ""
+msgstr "Gestion dels contactes"
 
 #: ../data/toc.xml.in.h:30
 msgid "Data Visualization"
-msgstr ""
+msgstr "Visualizacion de donadas"
 
 #: ../data/toc.xml.in.h:31
 msgid "Databases"
@@ -407,7 +407,7 @@ msgstr "Basas de donadas"
 
 #: ../data/toc.xml.in.h:32
 msgid "Debuggers"
-msgstr ""
+msgstr "Desbugadors"
 
 #: ../data/toc.xml.in.h:33
 msgid "Desktop"
@@ -419,7 +419,7 @@ msgstr "Paramètres del burèu"
 
 #: ../data/toc.xml.in.h:36
 msgid "Dialup"
-msgstr ""
+msgstr "Connexions comutadas"
 
 #: ../data/toc.xml.in.h:37
 msgid "Dictionaries"
@@ -428,7 +428,7 @@ msgstr "Diccionaris"
 #. Translators: this is a menu title for burning audio and video to dics
 #: ../data/toc.xml.in.h:39
 msgid "Disc Burning"
-msgstr ""
+msgstr "Gravadura de disques"
 
 #: ../data/toc.xml.in.h:40
 msgid "Economy"
@@ -448,15 +448,15 @@ msgstr "Electronica"
 
 #: ../data/toc.xml.in.h:44
 msgid "Email Tools"
-msgstr ""
+msgstr "Espleches de messatjariá"
 
 #: ../data/toc.xml.in.h:45
 msgid "Emulator"
-msgstr ""
+msgstr "Emulator"
 
 #: ../data/toc.xml.in.h:46
 msgid "Engineering"
-msgstr ""
+msgstr "Ingenhiariá"
 
 #: ../data/toc.xml.in.h:47
 msgid "File Manager"
@@ -476,11 +476,11 @@ msgstr "Sistèma de fichièrs"
 
 #: ../data/toc.xml.in.h:51
 msgid "Financial Tools"
-msgstr ""
+msgstr "Espleches financièrs"
 
 #: ../data/toc.xml.in.h:52
 msgid "Flow Charting Tools"
-msgstr ""
+msgstr "Espleches de diagramas de flux"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
@@ -492,7 +492,7 @@ msgstr "GTK"
 
 #: ../data/toc.xml.in.h:55
 msgid "GUI Designers"
-msgstr ""
+msgstr "Conceptors d'interfàcia grafica d'utilizaire"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
@@ -512,7 +512,7 @@ msgstr "Geologia"
 
 #: ../data/toc.xml.in.h:61
 msgid "Geoscience"
-msgstr ""
+msgstr "Geosciéncia"
 
 #: ../data/toc.xml.in.h:62
 msgid "Graphics"
@@ -520,23 +520,23 @@ msgstr "Grafisme"
 
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
-msgstr ""
+msgstr "Guidas e manuals de las aplicacions que se connèctan al mond exterior"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
-msgstr ""
+msgstr "Guidas d'introduccion al desvolopament"
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
-msgstr ""
+msgstr "Ràdio amator"
 
 #: ../data/toc.xml.in.h:66
 msgid "Hardware Settings"
-msgstr ""
+msgstr "Configuracion materiala"
 
 #: ../data/toc.xml.in.h:67
 msgid "Have some fun"
-msgstr ""
+msgstr "Divertiment"
 
 #: ../data/toc.xml.in.h:68
 msgid "History"
@@ -544,7 +544,7 @@ msgstr "Istoric"
 
 #: ../data/toc.xml.in.h:69
 msgid "IDEs"
-msgstr ""
+msgstr "Environaments de desvolopament integrat"
 
 #: ../data/toc.xml.in.h:70
 msgid "IRC Clients"
@@ -552,7 +552,7 @@ msgstr "Clients IRC"
 
 #: ../data/toc.xml.in.h:71
 msgid "Image Processing"
-msgstr ""
+msgstr "Tractament dels imatges"
 
 #: ../data/toc.xml.in.h:72
 msgid "Instant Messaging"
@@ -579,10 +579,12 @@ msgid ""
 "Learn more about making your system more accessible for a range of "
 "disabilities"
 msgstr ""
+"Ne saber mai sul biais de rendre vòstre sistèma mai accessible a las "
+"personas que patisson d'andicaps"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
-msgstr ""
+msgstr "Licéncias"
 
 #: ../data/toc.xml.in.h:79
 msgid "Literature"
@@ -598,7 +600,7 @@ msgstr "Matematicas"
 
 #: ../data/toc.xml.in.h:82
 msgid "Medical Software"
-msgstr ""
+msgstr "Logicial medical"
 
 #: ../data/toc.xml.in.h:83
 msgid "Midi"
@@ -610,15 +612,15 @@ msgstr "Documentacion divèrsa"
 
 #: ../data/toc.xml.in.h:85
 msgid "Mixers"
-msgstr ""
+msgstr "Mixadors"
 
 #: ../data/toc.xml.in.h:86
 msgid "Monitor"
-msgstr ""
+msgstr "Ecran"
 
 #: ../data/toc.xml.in.h:87
 msgid "Motif"
-msgstr ""
+msgstr "Motiu"
 
 #: ../data/toc.xml.in.h:88
 msgid "Music"
@@ -630,7 +632,7 @@ msgstr "Novèlas"
 
 #: ../data/toc.xml.in.h:90
 msgid "Numerical Analysis"
-msgstr ""
+msgstr "Analisi numeric"
 
 #: ../data/toc.xml.in.h:91
 msgid "OCR"
@@ -654,7 +656,7 @@ msgstr "P2P"
 
 #: ../data/toc.xml.in.h:96
 msgid "PDA Communication"
-msgstr ""
+msgstr "Comunicacion PDA"
 
 #: ../data/toc.xml.in.h:97
 msgid "Package Manager"
@@ -662,7 +664,7 @@ msgstr "Gestinari de paquetatges"
 
 #: ../data/toc.xml.in.h:98
 msgid "Parallel Computing"
-msgstr ""
+msgstr "Calcul parallèl"
 
 #: ../data/toc.xml.in.h:99
 msgid "Photography"
@@ -679,7 +681,7 @@ msgstr "Jogaires"
 
 #: ../data/toc.xml.in.h:103
 msgid "Presentation Tools"
-msgstr ""
+msgstr "Espleches de presentacion"
 
 #: ../data/toc.xml.in.h:104 ../src/yelp-print.c:337 ../src/yelp-print.c:364
 msgid "Printing"
@@ -687,11 +689,11 @@ msgstr "Estampatge"
 
 #: ../data/toc.xml.in.h:105
 msgid "Profiling Tools"
-msgstr ""
+msgstr "Espleches d'analisi"
 
 #: ../data/toc.xml.in.h:106
 msgid "Project Management Tools"
-msgstr ""
+msgstr "Espleches de gestion de projècte"
 
 #: ../data/toc.xml.in.h:107
 msgid "Publishing"
@@ -703,12 +705,12 @@ msgstr "Qt"
 
 #: ../data/toc.xml.in.h:109
 msgid "Raster Graphics"
-msgstr ""
+msgstr "Rendut de grafismes"
 
 #. Translators: this is a menu title for audio and video recorders
 #: ../data/toc.xml.in.h:111
 msgid "Recorders"
-msgstr ""
+msgstr "Enregistradors"
 
 #: ../data/toc.xml.in.h:112
 msgid "Remote Access"
@@ -716,7 +718,7 @@ msgstr "Accès distant"
 
 #: ../data/toc.xml.in.h:113
 msgid "Revision Control"
-msgstr ""
+msgstr "Gestion de versions"
 
 #: ../data/toc.xml.in.h:114
 msgid "Robotics"
@@ -724,11 +726,11 @@ msgstr "Robotica"
 
 #: ../data/toc.xml.in.h:115
 msgid "Role Playing Games"
-msgstr ""
+msgstr "Jòcs de ròtle"
 
 #: ../data/toc.xml.in.h:116
 msgid "Scanning"
-msgstr ""
+msgstr "Fintar"
 
 #: ../data/toc.xml.in.h:117
 msgid "Science"
@@ -740,7 +742,7 @@ msgstr "Seguritat"
 
 #: ../data/toc.xml.in.h:119
 msgid "Sequencers"
-msgstr ""
+msgstr "Sequenciadors"
 
 #: ../data/toc.xml.in.h:120
 msgid "Settings"
@@ -749,10 +751,12 @@ msgstr "Paramètres"
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
 msgstr ""
+"Paramètres que los utilizares pòdon modificar per far lor environament mai "
+"agradiu"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
-msgstr ""
+msgstr "Jòcs de simulacion"
 
 #: ../data/toc.xml.in.h:123
 msgid "Sound"
@@ -764,7 +768,7 @@ msgstr "Son e videò"
 
 #: ../data/toc.xml.in.h:125
 msgid "Sound &amp; Video Editing"
-msgstr ""
+msgstr "Edicion sonòra e vidèo"
 
 #: ../data/toc.xml.in.h:126
 msgid "Sports"
@@ -792,15 +796,15 @@ msgstr "TV"
 
 #: ../data/toc.xml.in.h:132
 msgid "Telephony"
-msgstr ""
+msgstr "Telefoniá"
 
 #: ../data/toc.xml.in.h:133
 msgid "Telephony Tools"
-msgstr ""
+msgstr "Espleches de telefoniá"
 
 #: ../data/toc.xml.in.h:134
 msgid "Terminal Emulator"
-msgstr ""
+msgstr "Emulador de terminal"
 
 #: ../data/toc.xml.in.h:135
 msgid "Text Editors"
@@ -820,7 +824,7 @@ msgstr "Espleches de revirada"
 
 #: ../data/toc.xml.in.h:139
 msgid "Tuners"
-msgstr ""
+msgstr "Ràdio"
 
 #: ../data/toc.xml.in.h:140
 msgid "Utilities"
@@ -828,11 +832,11 @@ msgstr "Utilitaris"
 
 #: ../data/toc.xml.in.h:141
 msgid "Utilities to help you get work done"
-msgstr ""
+msgstr "Utilitaris per vos ajudar a far vòstre trabalh"
 
 #: ../data/toc.xml.in.h:142
 msgid "Vector Graphics"
-msgstr ""
+msgstr "Grafisme vectorial"
 
 #: ../data/toc.xml.in.h:143
 msgid "Video"
@@ -881,7 +885,7 @@ msgstr "Marca-paginas"
 
 #: ../data/ui/yelp.glade.h:5
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Téner compte de la c_assa"
 
 #: ../data/ui/yelp.glade.h:6
 msgid "Find"
@@ -905,7 +909,7 @@ msgstr "_Favorits :"
 
 #: ../data/ui/yelp.glade.h:11
 msgid "_Browse with caret"
-msgstr ""
+msgstr "_Navigar amb lo cursor"
 
 #: ../data/ui/yelp.glade.h:12
 msgid "_Find:"
@@ -913,7 +917,7 @@ msgstr "_Recercar :"
 
 #: ../data/ui/yelp.glade.h:13
 msgid "_Fixed width:"
-msgstr ""
+msgstr "Chassa _fixa :"
 
 #: ../data/ui/yelp.glade.h:14
 msgid "_Location:"
@@ -941,11 +945,11 @@ msgstr "Largor _variabla :"
 
 #: ../data/ui/yelp.glade.h:20
 msgid "_Wrap around"
-msgstr ""
+msgstr "Recèrca _circulara"
 
 #: ../data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr ""
+msgstr "Poliça de chassa fixa"
 
 #: ../data/yelp.schemas.in.h:2
 msgid "Font for text"
@@ -953,19 +957,21 @@ msgstr "Poliça pel tèxt"
 
 #: ../data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr ""
+msgstr "Poliça de tèxte de chassa fixa."
 
 #: ../data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr ""
+msgstr "Poliça de tèxte de chassa variabla."
 
 #: ../data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
 msgstr ""
+"Utilizar un cursor contrarotlable pel clavièr al moment de la visualizacion "
+"de las paginas."
 
 #: ../data/yelp.schemas.in.h:6
 msgid "Use caret"
-msgstr ""
+msgstr "Utilizar lo cursor"
 
 #: ../data/yelp.schemas.in.h:7
 msgid "Use system fonts"
@@ -1022,7 +1028,7 @@ msgstr "Impossible de trobar la pagina %s dins lo document %s."
 #: ../src/yelp-man.c:386
 #, c-format
 msgid "The requested page was not found in the document %s."
-msgstr ""
+msgstr "La pagina demandada es pas estada trobada dins lo document %s."
 
 #: ../src/yelp-db-print.c:392 ../src/yelp-docbook.c:410 ../src/yelp-info.c:380
 #: ../src/yelp-man.c:429
@@ -1039,7 +1045,7 @@ msgstr "Lo fichièr '%s' existís pas."
 #: ../src/yelp-docbook.c:424 ../src/yelp-docbook.c:436 ../src/yelp-info.c:395
 #: ../src/yelp-man.c:458 ../src/yelp-toc.c:437
 msgid "Could not parse file"
-msgstr ""
+msgstr "Impossible d'analisar lo fichièr"
 
 #: ../src/yelp-db-print.c:407 ../src/yelp-docbook.c:425
 #, c-format
@@ -1047,6 +1053,8 @@ msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed XML "
 "document."
 msgstr ""
+"Lo fichièr « %s » a pas pogut èsser analisat, perque es pas un document XML "
+"corrèctament format."
 
 #: ../src/yelp-db-print.c:419 ../src/yelp-docbook.c:437
 #, c-format
@@ -1054,6 +1062,8 @@ msgid ""
 "The file ‘%s’ could not be parsed because one or more of its included files "
 "is not a well-formed XML document."
 msgstr ""
+"Lo fichièr « %s » a pas pogut èsser analisat, perque un o mai d'un de sos "
+"fichièrs incluses es pas un document XML corrèctament format."
 
 #: ../src/yelp-db-print.c:765 ../src/yelp-docbook.c:786
 msgid "Unknown"
@@ -1069,13 +1079,15 @@ msgstr "Impossible de legir lo fichièr"
 
 #: ../src/yelp-error.c:146
 msgid "No information is available about this error."
-msgstr ""
+msgstr "Cap d'informacion es pas disponibla a prepaus d'aquesta error."
 
 #: ../src/yelp-info.c:396
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed info page."
 msgstr ""
+"Lo fichièr « %s » a pas pogut èsser analisat, perque es pas una pagina info "
+"corrèctament formada."
 
 #: ../src/yelp-io-channel.c:132
 #, c-format
@@ -1108,6 +1120,8 @@ msgstr "Ajuda"
 msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed man page."
 msgstr ""
+"Lo fichièr « %s » a pas pogut èsser analisat, perque es pas una pagina de "
+"manual corrèctament formada."
 
 #: ../src/yelp-print.c:97
 msgid "Print"
@@ -1141,7 +1155,7 @@ msgstr "Impossible d'estampar vòstre document : %s"
 
 #: ../src/yelp-search-parser.c:67
 msgid "the GNOME Support Forums"
-msgstr ""
+msgstr "Los forums d'assisténcia de GNOME"
 
 #: ../src/yelp-search-parser.c:285
 #, c-format
@@ -1153,6 +1167,8 @@ msgid ""
 "Try using different words to describe the problem you're having or the topic "
 "you want help with."
 msgstr ""
+"Ensajatz d'utilizar de mots diferents per descriure lo problèma qu'avètz o "
+"lo tèma dins lo qual volètz d'ajuda."
 
 #: ../src/yelp-search-parser.c:289
 #, c-format
@@ -1167,7 +1183,7 @@ msgstr "Resultas de la recèrca per \"%s\""
 #: ../src/yelp-search-parser.c:303
 #, c-format
 msgid "Repeat the search online at %s"
-msgstr ""
+msgstr "Repetir la recèrca en linha a %s"
 
 #. Translators: Do not translate this list exactly.  These are
 #. * colon-separated words that aren't useful for choosing search
@@ -1184,6 +1200,8 @@ msgid ""
 "help:how:i:in:is:it:item:me:my:of:on:or:tell:that:the:thing:this:to:what:"
 "where:who:will:with:won't:wont:why:work:working:works"
 msgstr ""
+"ieu:tu:el:ela:nos:vos:eles:elas:me:te:le:la:los:li:lor:me:te:mas:o:e:doncas:"
+"o:ni:perque:un:una:de:que:quina:siá:qué:quora:tanben:coma:causa:daquòs:ajuda"
 
 #. Translators: This is a list of common prefixes for words.
 #. * Do not translate this directly.  Instead, use a colon
@@ -1207,55 +1225,62 @@ msgstr "re"
 #: ../src/yelp-search-parser.c:899
 msgid "ers:er:ing:es:s:'s"
 msgstr ""
+"acion:aça:ada:atge:enc:ava:al:algia:algic:antròp:antropic:arquia:arque:assa:"
+"astre:cid:còl:cultura:dèrme:eria:esca:e:or:oses:gama:gamia:gèn:genèsi:gòn:"
+"gonia:grada:grafia:genia:iatra:iatria:isme:ista:ium:latria:logia:logic:lòg:"
+"ment:nòm:onar:patia:fag:fil:filia:fòba:fobia:s:tcnia:tecnic:terapèuta:"
+"terapia:terapic:tiu:vòr"
 
 #: ../src/yelp-search-parser.c:1095
 msgid "No Comment"
-msgstr ""
+msgstr "Sens comentari"
 
 #. Much bigger problems
 #: ../src/yelp-search.c:238
 msgid "Search could not be processed"
-msgstr ""
+msgstr "Impossible d'efectuar la recèrca"
 
 #: ../src/yelp-search.c:239
 msgid "The requested search could not be processed."
-msgstr ""
+msgstr "La recèrca demandada a pas pogut èsser tractada."
 
 #: ../src/yelp-search.c:366
 msgid "Cannot process the search"
-msgstr ""
+msgstr "Impossible d'efectuar la recèrca"
 
 #: ../src/yelp-search.c:367
 msgid "The search processor returned invalid results"
-msgstr ""
+msgstr "Lo motor de recèrca a tornat de resultats invalids"
 
 #: ../src/yelp-toc.c:267
 #, c-format
 msgid "The page %s was not found in the TOC."
-msgstr ""
+msgstr "La pagina %s se tròba pas dins l'ensenhador"
 
 #: ../src/yelp-toc.c:366
 msgid "The requested page was not found in the TOC."
-msgstr ""
+msgstr "La pagina demandada se tròba pas dins l'ensenhador"
 
 #: ../src/yelp-toc.c:438
 msgid ""
 "The TOC file could not be parsed because it is not a well-formed XML "
 "document."
 msgstr ""
+"Lo fichièr d'ensenhador pòt pas èsser analisat perque es pas un document XML "
+"corrèctament format."
 
 #: ../src/yelp-transform.c:80
 msgid "Invalid Stylesheet"
-msgstr ""
+msgstr "Fuèlha d'estil invalida"
 
 #: ../src/yelp-transform.c:81
 #, c-format
 msgid "The XSLT stylesheet ‘%s’ is either missing, or it is not valid."
-msgstr ""
+msgstr "Lo fuèlh d'estil « %s » es mancant o es invalid."
 
 #: ../src/yelp-transform.c:112
 msgid "Broken Transformation"
-msgstr ""
+msgstr "Fracàs de transformacion"
 
 #: ../src/yelp-transform.c:113
 msgid "An unknown error occurred while attempting to transform the document."
@@ -1265,7 +1290,7 @@ msgstr ""
 
 #: ../src/yelp-transform.c:373
 msgid "No href attribute found on yelp:document\n"
-msgstr ""
+msgstr "Cap d'atribut href pas trobat dins yelp:document\n"
 
 #: ../src/yelp-transform.c:388
 msgid "Out of memory"
@@ -1333,7 +1358,7 @@ msgstr "Recercar lo _precedent"
 
 #: ../src/yelp-window.c:360
 msgid "Find previous occurrence of the word or phrase"
-msgstr ""
+msgstr "Recèrca l'occurréncia precedenta d'aqueste mot o d'aquesta expression"
 
 #: ../src/yelp-window.c:363
 msgid "Find Ne_xt"
@@ -1341,7 +1366,7 @@ msgstr "Recercar lo seguent"
 
 #: ../src/yelp-window.c:365
 msgid "Find next occurrence of the word or phrase"
-msgstr ""
+msgstr "Recèrca l'occurréncian venenta d'aqueste mot o d'aquesta expression"
 
 #: ../src/yelp-window.c:368
 msgid "_Preferences"
@@ -1435,7 +1460,7 @@ msgstr "Pagina desconeguda"
 #: ../src/yelp-window.c:1084
 #, c-format
 msgid "The requested URI \"%s\" is invalid"
-msgstr ""
+msgstr "L'URI demandat « %s » es invalid"
 
 #: ../src/yelp-window.c:1009 ../src/yelp-window.c:1066
 #: ../src/yelp-window.c:1085
@@ -1444,7 +1469,7 @@ msgstr "Impossible de cargar la pagina"
 
 #: ../src/yelp-window.c:1079
 msgid "Error executing \"gnome-open\""
-msgstr ""
+msgstr "Error al moment d'executar \"gnome-open\""
 
 #: ../src/yelp-window.c:1265
 msgid "_Search:"
@@ -1460,7 +1485,7 @@ msgstr "Impossible de crear una fenèstra"
 
 #: ../src/yelp-window.c:1292
 msgid "Cannot create search component"
-msgstr ""
+msgstr "Impossible de crear un component de recèrca"
 
 #: ../src/yelp-window.c:1464
 msgid "Fin_d:"
@@ -1484,6 +1509,8 @@ msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
 "not have permissions to read it."
 msgstr ""
+"Lo fichièr « %s » pòt pas èsser legit. Benlèu qu'aqueste fichièr es mancant, "
+"o qu'avètz pas las permissions per lo legir."
 
 #. Note to translators: put here your name (and address) so it
 #. * will show up in the "about" box
@@ -1502,4 +1529,3 @@ msgstr "Un navigador e legidor de documentacion pel burèu GNOME."
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Obténer d'ajuda amb GNOME"
-
