--- a/po/et.po
+++ b/po/et.po
@@ -12,10 +12,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp HEAD\n"
+"Project-Id-Version: yelp 2.30\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
-"POT-Creation-Date: 2009-08-07 00:18+0000\n"
+"POT-Creation-Date: 2010-04-01 06:47+0000\n"
 "PO-Revision-Date: 2009-08-07 11:00+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
