--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Changes in 2.30.1:
+------------------
+* Support relocatable .gnome2 directory (Ray Strode)
+* Don't break on info pages with "/" in title (Edward Sheldrake)
+* Updated translations:
+  bn_IN        (Runa Bhattacharjee)
+  ca@valencia  (Carles Ferrando)
+  crh          (Reşat SABIQ)
+  et           (Ivar Smolin)
+  id           (Andika Triwidada)
+  kn           (Shankar Prasad)
+  nl           (Wouter Bolsterlee)
+
 Changes in 2.30.0:
 ------------------
 * Updated translations:
